# clog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clog.cpp  clog.hpp  main.cpp
.github/workflows/: ci.yml
cmake/: AddInstallTarget.cmake
